plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.12'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'ort.dpdns.org.mingtops'
version = '0.0.1-SNAPSHOT'
description = 'demo'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.modulith:spring-modulith-bom:1.4.1'
    }
}

dependencies {
    // Source: https://mvnrepository.com/artifact/com.google.apis/google-api-services-gmail
    implementation 'com.google.apis:google-api-services-gmail:v1-rev110-1.25.0'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    // Source: https://mvnrepository.com/artifact/dev.langchain4j/langchain4j-qdrant
    implementation 'dev.langchain4j:langchain4j-qdrant:1.12.2-beta22'
    // Qdrant Client (升级到 1.17.0 以匹配服务器版本)
    implementation 'io.qdrant:client:1.17.0'
    // gRPC 和 Protobuf 依赖
    implementation 'io.grpc:grpc-netty-shaded:1.69.0'
    implementation 'io.grpc:grpc-protobuf:1.69.0'
    implementation 'io.grpc:grpc-stub:1.69.0'
    implementation 'com.google.protobuf:protobuf-java:3.25.5'
    // Source: https://mvnrepository.com/artifact/org.reactivestreams/reactive-streams
    implementation 'org.reactivestreams:reactive-streams:1.0.4'
    // 1. LangChain4j 依赖 (统一使用 1.12.2-beta22)
    implementation 'dev.langchain4j:langchain4j-spring-boot-starter:1.12.2-beta22'
    implementation 'dev.langchain4j:langchain4j-open-ai-spring-boot-starter:1.12.2-beta22'
    implementation 'dev.langchain4j:langchain4j-ollama-spring-boot-starter:1.12.2-beta22'
    // 添加 Reactor 模块支持 Flux 流式响应
    implementation 'dev.langchain4j:langchain4j-reactor:1.12.2-beta22'
    // Source: https://mvnrepository.com/artifact/com.alibaba/druid-spring-boot-starter
    implementation 'com.alibaba:druid-spring-boot-starter:1.2.28'

    // 2. MyBatis Plus (修正为适配 Spring Boot 3 的版本)
    implementation 'com.baomidou:mybatis-plus-spring-boot3-starter:3.5.10.1'
    // MyBatis Plus 分页插件依赖
    implementation 'com.baomidou:mybatis-plus-jsqlparser:3.5.10.1'

    // 3. Spring Boot 基础
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.modulith:spring-modulith-starter-core'

    // 4. 工具与数据库
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

    // 邮件监听 - JavaMail API
    implementation 'com.sun.mail:jakarta.mail:2.0.1'

    // YAML解析
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.18.2'

    // 文档内容提取
    // PDF 文件处理
    implementation 'org.apache.pdfbox:pdfbox:2.0.29'
    // Word 文件处理 (docx)
    implementation 'org.apache.poi:poi-ooxml:5.2.3'

    // 5. 测试
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // 6. 运维可观测性：健康检查 + Prometheus 指标
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
}

tasks.named('test') {
    useJUnitPlatform()
}

// 编译时使用 UTF-8 编码
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

// 处理资源文件时使用 UTF-8 编码
tasks.withType(ProcessResources).configureEach {
    filteringCharset = 'UTF-8'
}
